--- a/Corona-Warn-App/src/main/res/values-de/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-de/strings.xml
@@ -250,7 +250,7 @@
   <string name="onboarding_subtitle">Mehr Schutz für Sie und uns alle. Mit der Coronalert-App durchbrechen wir Infektionsketten schneller.</string>
   <string name="onboarding_body">Machen Sie Ihr Handy zum Coronalert System. Erhalten Sie eine Übersicht über Ihren Risikostatus und erfahren Sie, ob in den letzten 14 Tagen Corona-Infizierte in Ihrer Nähe waren.</string>
   <string name="onboarding_body_emphasized">Die App merkt sich Begegnungen zwischen Menschen, indem ihre Handys ohne Zugriff auf persönliche Daten verschlüsselte Zufallscodes austauschen.</string>
-  <string name="onboarding_illustration_description">Eine Personengruppe benutzt Handys in einer Stadt.</string>
+  <string name="onboarding_illustration_description">Offizielle Logos der föderale Regierung, der flämischen Regierung, der wallonischen Region, der Region Brüssel-Hauptstadt und der deutschsprachigen Gemeinschaft.</string>
   <string name="onboarding_privacy_accessibility_title">Onboarding Seite 2 von 5: Datenschutz. Es folgt ein langer Text. Sie können jederzeit mit der Taste am unteren Bildschirmrand fortfahren.</string>
   <string name="onboarding_privacy_headline">Datenschutz</string>
   <string name="onboarding_privacy_illustration_description">Eine Frau mit einem Handy benutzt die Coronalert-App. Ein Vorhängeschloss auf einem Schild steht als Symbol für verschlüsselte Daten.</string>
