--- a/Corona-Warn-App/src/main/res/values-nl/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-nl/strings.xml
@@ -249,7 +249,7 @@
   <string name="onboarding_subtitle">Bescherm uzelf en ons allemaal. Gebruik Coronalert, zo kunnen we de infectieketens sneller doorbreken.</string>
   <string name="onboarding_body">Maak van uw toestel een corona-waarschuwingssysteem. U krijgt een overzicht van uw risicostatus en krijgt te horen of u de voorbije 14 dagen nauw contact heeft gehad met mensen die een COVID-19-diagnose hebben gekregen.</string>
   <string name="onboarding_body_emphasized">De app registreert contacten tussen mensen. Hiervoor worden gecodeerde willekeurige ID\'s uitgewisseld tussen hun toestellen. Er is op geen enkel moment toegang tot persoonlijke gegevens.</string>
-  <string name="onboarding_illustration_description">Een groep mensen gebruikt hun smartphones in de stad.</string>
+  <string name="onboarding_illustration_description">Officiële logo’s van de federale overheid, de Vlaamse overheid, het Waals Gewest, Het Brussels Hoofdstedelijk Gewest en de Duitstalige Gemeenschap.</string>
   <string name="onboarding_privacy_accessibility_title">Onboarding pagina 2 van 5: Privacy van gegevens. Er volgt een lange tekst. Gebruik de knop onderaan het scherm om op elk moment verder te gaan.</string>
   <string name="onboarding_privacy_headline">Privacy van gegevens</string>
   <string name="onboarding_privacy_illustration_description">Een vrouw gebruikt Coronalert op haar smartphone. Het hangslot op een schildje geeft aan dat de gegevens versleuteld worden.</string>
