--- a/Corona-Warn-App/src/main/res/values/strings.xml
+++ b/Corona-Warn-App/src/main/res/values/strings.xml
@@ -178,7 +178,7 @@ This can take several minutes.</string>
   <string name="main_share_button">Send Download Link</string>
   <string name="main_share_message">Fighting coronavirus together<xliff:g id="line_break">
 </xliff:g>I\'m in on this, you too?<xliff:g id="line_break">
-</xliff:g><xliff:g id="link_play_store">https://www.coronalert.be</xliff:g>
+</xliff:g><xliff:g id="link_play_store">https://coronalert.be</xliff:g>
 <xliff:g id="line_break">
 </xliff:g></string>
   <string name="main_share_illustration_description">A man shares the Coronalert-App with four other persons.</string>
@@ -202,18 +202,18 @@ This can take several minutes.</string>
   <string name="main_overview_subtitle_glossary_contact">Exposures</string>
   <string name="main_overview_body_glossary_contact">Encounters over a longer duration and close proximity to people diagnosed with COVID-19.</string>
   <string name="main_overview_subtitle_glossary_notification">Exposure Notification</string>
-  <string name="main_overview_body_glossary_notification">The display of exposures in the Coronalert-App.</string>
+  <string name="main_overview_body_glossary_notification">If you have been in close contact with a person who has tested positive for COVID-19 and who has shared his or her result in the Coronalert application, you will be notified through the exposure notification.</string>
   <string name="main_overview_subtitle_glossary_keys">Random IDs</string>
   <string name="main_overview_body_glossary_keys">Random IDs are combinations of digits and letters generated randomly. They are exchanged between devices in close proximity. Random IDs cannot be traced to a specific person and are automatically deleted after 14 days. Persons diagnosed with COVID-19 can opt to share their random IDs of up to the last 14 days with other app users.</string>
   <string name="main_overview_illustration_description">A smartphone displays various content, numbered 1 to 3.</string>
   <string name="main_title">Main page of the Coronalert-App</string>
   <string name="risk_details_title">Your Risk Status</string>
-  <string name="risk_details_headline_behavior">Guidelines</string>
+  <string name="risk_details_headline_behavior">Preventive measures</string>
   <string name="risk_details_subtitle_behavior">This is what you should do</string>
   <string name="risk_details_behavior_body_stay_home">If possible, please go home and stay at home.</string>
   <string name="risk_details_behavior_body_contact_doctor">If you have questions about symptoms, testing availability, or self-isolation, please contact one of the following:</string>
   <string name="risk_details_behavior_body_wash_hands">Wash your hands regularly.</string>
-  <string name="risk_details_behavior_body_wear_mask">Wear a face mask when you encounter other people.</string>
+  <string name="risk_details_behavior_body_wear_mask">Wear a face mask when you encounter other people, as well as in places where it is mandatory.</string>
   <string name="risk_details_behavior_body_stay_away">Keep at least 1.5 meters distance from other people.</string>
   <string name="risk_details_behavior_body_cough_sneeze">Sneeze or cough into your elbow or a tissue.</string>
   <string name="risk_details_behavior_increased_body_1">Your general practitioner</string>
@@ -250,7 +250,7 @@ This can take several minutes.</string>
   <string name="onboarding_subtitle">More protection for you and for us all. By using the Coronalert-App we can break infection chains much quicker.</string>
   <string name="onboarding_body">Turn your device into a coronavirus warning system. Get an overview of your risk status and find out whether you\'ve had close contact with anyone diagnosed with COVID-19 in the last 14 days.</string>
   <string name="onboarding_body_emphasized">The app logs encounters between individuals by exchanging encrypted, random IDs between their devices, whereby no personal data whatsoever is accessed.</string>
-  <string name="onboarding_illustration_description">A group of persons use their smartphones around town.</string>
+  <string name="onboarding_illustration_description">Official logos of the federal government, the Flemish government, the Walloon Region, the Brussels-Capital Region and the German-speaking Community.</string>
   <string name="onboarding_privacy_accessibility_title">Onboarding page 2 of 5: Data Privacy. A long text follows. To proceed at any time, use the button at the bottom of the screen.</string>
   <string name="onboarding_privacy_headline">Data Privacy</string>
   <string name="onboarding_privacy_illustration_description">A woman uses the Coronalert-App on her smartphone. An icon showing a padlock on the background of a shield symbolizes encrypted data.</string>
@@ -258,7 +258,7 @@ This can take several minutes.</string>
   <string name="onboarding_tracing_headline">How to Enable Exposure Logging</string>
   <string name="onboarding_tracing_subtitle">To identify whether you are at risk of infection, you must activate the exposure logging feature.</string>
   <string name="onboarding_tracing_body">Exposure logging works by your device receiving, via Bluetooth, encrypted random IDs of other users and passing your own random ID to their devices. This feature can be deactivated at any time.</string>
-  <string name="onboarding_tracing_body_emphasized">The encrypted random IDs only pass information about date, duration and proximity (using signal strength) to other people. Personal data such as name, address, location is never recorded. Individuals cannot be identified.</string>
+  <string name="onboarding_tracing_body_emphasized">Encrypted random IDs only pass information about date, duration, and proximity (calculated using signal strength) to other people. Personal data such as name, address, location and time is never recorded. Individuals cannot be identified.</string>
   <string name="onboarding_tracing_headline_consent">Declaration of Consent</string>
   <string name="onboarding_tracing_body_consent">To find out whether you have been in contact with an infected person and whether there is a risk that you yourself have been infected, you need to enable the App’s exposure logging feature. By tapping on the “Enable” button, you agree to the enabling of the App’s exposure logging feature and the associated data processing.<xliff:g id="line_break">
 </xliff:g><xliff:g id="line_break">
@@ -284,8 +284,8 @@ This can take several minutes.</string>
   <string name="onboarding_tracing_location_button">Open Device Settings</string>
   <string name="onboarding_test_accessibility_title">Onboarding page 4 of 5: If you are diagnosed with COVID-19...</string>
   <string name="onboarding_test_headline">If you are diagnosed with COVID-19…</string>
-  <string name="onboarding_test_subtitle">… please report this in the Coronalert-App. Sharing your test results is voluntary and secure. Please do this for the sake of everyone\'s health.</string>
-  <string name="onboarding_test_body">Your notification is encrypted securely and processed on a secure server. People whose encrypted random IDs your device has collected will now receive a warning along with information about what they should now do.</string>
+  <string name="onboarding_test_subtitle">... please report it in this application. Sharing your test results is always voluntary and anonymous. We therefore encourage you to do so in order to continue to protect the health of all.</string>
+  <string name="onboarding_test_body">This information will always be treated anonymously and securely. Your name and personal data will not be shared. Only random identifiers will be sent to the phones of people with whom you have had close contact and who use the application. This will allow them to know their risk without knowing the origin of the risk. They will also receive information on the steps to follow.</string>
   <string name="onboarding_test_illustration_description">An encrypted positive test diagnosis is transmitted to the system, which will now warn other users.</string>
   <string name="onboarding_notifications_accessibility_title">Onboarding page 5 of 5: Receive warnings and identify risks</string>
   <string name="onboarding_notifications_headline">Receive warnings and identify risks</string>
@@ -303,7 +303,7 @@ This can take several minutes.</string>
   <string name="settings_tracing_body_inactive_location">Location service deactivated</string>
   <string name="settings_tracing_body_text">Exposure logging works by your device receiving, via Bluetooth, encrypted random IDs of other users and passing your random ID to their devices. This feature can be deactivated at any time. <xliff:g id="line_break">
 </xliff:g><xliff:g id="line_break">
-</xliff:g>Encrypted random IDs only pass information about date, duration, and proximity (calculated using signal strength) to other people. Personal data such as name, address, and location is never recorded. Individuals cannot be identified.</string>
+</xliff:g>Encrypted random IDs only pass information about date, duration, and proximity (calculated using signal strength) to other people. Personal data such as name, address, location and time is never recorded. Individuals cannot be identified.</string>
   <string name="settings_tracing_status_active">Active</string>
   <string name="settings_tracing_status_inactive">Stopped</string>
   <string name="settings_tracing_status_restricted">Restricted</string>
@@ -362,7 +362,7 @@ This can take several minutes.</string>
   <string name="information_version">Version: %1s</string>
   <string name="information_about_title">About the App</string>
   <string name="information_about_headline">Let\'s fight coronavirus together</string>
-  <string name="information_about_body_emphasized">Sciensano is the Belgian federal public health agency. It publishes the Coronalert application on behalf of the federal government. The application is designed as a digital complement to the public health measures already in place: social distancing, hygiene and masks.</string>
+  <string name="information_about_body_emphasized">Sciensano is a Belgian federal public health agency. It publishes the Coronalert application on behalf of the governments of the federated entities. The application is intended as a digital complement to the public health measures already in place.</string>
   <string name="information_about_body">Whoever uses the app helps to trace and break chains of infection. The app saves encounters with other people locally on your device. You are notified if you have encountered people who were later diagnosed with COVID-19. Your identity and privacy are always protected.</string>
   <string name="information_about_illustration_description">A group of persons use their smartphones around town.</string>
   <string name="information_privacy_title">Data Privacy</string>
@@ -533,7 +533,7 @@ You can withdraw your consent at any time by deleting the App. This withdrawal o
   <string name="submission_status_card_body_invalid">Your test could not be evaluated.</string>
   <string name="submission_status_card_body_positive">You have been diagnosed positive for SARS-CoV-2.</string>
   <string name="submission_status_card_body_negative">You have been diagnosed negative for SARS-CoV-2.</string>
-  <string name="submission_status_card_button_unregistered">Learn More and Help</string>
+  <string name="submission_status_card_button_unregistered">I will be tested</string>
   <string name="submission_status_card_button_show_results">Display Test</string>
   <string name="submission_status_card_positive_result_subtitle">Please note:</string>
   <string name="submission_status_card_positive_result_contagious">You are infectious. Isolate yourself from other people.</string>
@@ -652,5 +652,5 @@ You can enable prioritized background activity in your settings any time.</strin
   </plurals>
   <string name="preference_dummy_test_requests_to_send">preference_dummy_test_requests_to_send</string>
   <string name="preference_negative_test_result">preference_negative_test_result</string>
-  <string name="test_api_switch_background_notifications">Switch background notification</string>
+  <string name="test_api_switch_background_notifications">Background notification</string>
 </resources>
