--- a/Corona-Warn-App/src/main/res/values-de/strings.xml
+++ b/Corona-Warn-App/src/main/res/values-de/strings.xml
@@ -205,13 +205,13 @@
   <string name="risk_details_headline_behavior">Vorbeugende Maßnahmen</string>
   <string name="risk_details_subtitle_behavior">So verhalten Sie sich richtig</string>
   <string name="risk_details_behavior_body_stay_home">Gehen Sie, wenn möglich, nach Hause bzw. bleiben Sie zu Hause.</string>
-  <string name="risk_details_behavior_body_contact_doctor">Bitte wenden Sie sich mit Fragen zu Symptomen, Testmöglichkeiten und weiteren Isolationsmaßnahmen, sich an eine der folgenden Stellen:</string>
+  <string name="risk_details_behavior_body_contact_doctor">Haben Sie Symptome, die auf Covid-19 hinweisen können, wie z.B. Müdigkeit, Fieber, trockener Husten, Kopfschmerzen, Geschmacks- oder Geruchsverlust? Bitte kontaktieren Sie eine der folgenden Personen:</string>
   <string name="risk_details_behavior_body_wash_hands">Waschen Sie Ihre Hände regelmäßig.</string>
   <string name="risk_details_behavior_body_wear_mask">Tragen Sie einen Mundschutz bei Begegnungen mit anderen Personen, sowie an Orten, an denen dies vorgeschrieben ist.</string>
   <string name="risk_details_behavior_body_stay_away">Halten Sie mindestens 1,5 Meter Abstand zu anderen Personen.</string>
   <string name="risk_details_behavior_body_cough_sneeze">Niesen oder husten Sie in die Armbeuge oder in ein Taschentuch.</string>
   <string name="risk_details_behavior_increased_body_1">Ihr Hausarzt</string>
-  <string name="risk_details_behavior_increased_body_2">Kassenärztlicher Bereitschaftsdienst unter der Telefonnummer: 112</string>
+  <string name="risk_details_behavior_increased_body_2">Den medizinischen Bereitschaftsdienst auf der Nummer 1733</string>
   <string name="risk_details_behavior_increased_body_3">Ihr Gesundheitsamt</string>
   <string name="risk_details_headline_infection_risk">Infektionsrisiko</string>
   <string name="risk_details_headline_period_logged">Erfasste Periode</string>
@@ -610,4 +610,7 @@
   <string name="preference_dummy_test_requests_to_send">preference_dummy_test_requests_to_send</string>
   <string name="preference_negative_test_result">preference_negative_test_result</string>
   <string name="test_api_switch_background_notifications"></string>
+    <string name="risk_details_behavior_body_contact_no_symptom">Haben Sie keine Symptome? Wenn nein, kontaktieren Sie bitte:</string>
+  <string name="risk_details_behavior_get_tested">Lassen Sie sich so bald wie möglich testen.</string>
+  <string name="risk_details_behavior_increased_body_1_no_symptom">Das Kontaktzentrum unter der 02 214.19.1</string>
 </resources>
